# echo

./: .gitignore  Cargo.toml  LICENSE
src/: cli.rs  main.rs
