[package]
name = "echo"
version = "0.1.0"
authors = ["Colin Rolfe <crolfe@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = { version="2.0.0", features = ["openssl"] }
actix-rt = "1.1.1"
openssl = "0.10.29"
serde = "1.0.111"
listenfd = "0.3.3"
serde_json = "1.0.55"
futures = "0.3.5"
